@@ -1,4 +1,4 @@
-$Id: NEWS,v 1.316 2002-12-07 22:09:08 jwm Exp $
+$Id: NEWS,v 1.317 2002-12-10 15:16:38 castaglia Exp $
 
 CVS
 ---------------------------------
@@ -43,6 +43,9 @@ CVS
   "syslog:" prefix tells mod_log to log that ExtendedLog data via syslog,
   and the "level" informs mod_log of which syslog level to use.
 - AIX sendfile support. Thanks to Andy Igoshin <ai@vsu.ru> for the patch.
+- 1858 - move "session closed" logging from graceful quit to child exit
+  sequence.  This allows for better log reporting, with respect to sessions
+  ended through means such as catastrophic death of client, or segfaults.
 
 1.2.7 - Released 05-12-2002
 ---------------------------------
